--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,50 @@
+:root{
+    --green: #20912f;
+    --white: #fff;
+    --blue: #042991;
+    --black: #000000;
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
+body{
+    background-color: #7e9ef5;
+}
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #777;
-    color: #FFF;
+    min-height: 80px;
+    background-color: var(--blue);
+    color: var(--white);
 }
 header h1{
-    font-size: 20px;
+    font-size: 15px;
+}
+header h1 span{
+    color: var(--green);
+    font-size: 25px;
 }
 header button{
     width: 150px;
-    height: 50px;
+    height: 40px;
     border-radius: 20px;
     border: none;
     font-size: 15px;
     font-weight: bold;
-    background-color: #FFF;
+    background-color: transparent;
+    color: var(--white);
 }
-header button:hover{
-    background-color: antiquewhite;
+header  a {
+    color: var(--white);
+    text-decoration: none;
+}
+header button a:hover {
+    text-decoration: underline;
 }
 #property-list{
     padding: 20px;
@@ -35,9 +54,10 @@ header button:hover{
     flex-wrap: wrap;
 }
 .property-card{
-    background-color: #d6d6d6;
+    background-color: #c0c0c069;
     width: 270px;
-    border: 1px solid #CCC;
+    height: 130px;
+    border: 1px solid #c4c4c4fd;
     border-radius: 10px;
     display: flex;
     padding: 10px;
@@ -53,25 +73,89 @@ header button:hover{
     justify-content: center;
     align-items: center;
 }
-.property-card .texts h5{
-    font-size: 18px;
-}
 .icon-property img{
     width: 100%;
     height: 100%;
     border-radius: 15px;
 }
-
-
-#add-property {
-    margin: 0 auto;
-    background-color: antiquewhite;
-    width: 900px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+.property-card .texts button{
+    border: none;
+    border-radius: 5px;
+    width: 60px;
+    font-weight: bold;
+    background-color: transparent;
+    color: var(--white);
+}
+.property-card .texts button:hover{
+    cursor: pointer;
+    background-color: #032a97;
+}
+.property-card .texts{
+    max-width: 135px;
+}
+.type{
+    font-size: 20px;
+}
+.endereco{
+    font-size: 15px;
 }
 
-body h1{
-    
+/* add.html */
+.modal-property{
+    width: 400px;
+    height: 370px;
+    background-color: #c0c0c069;
+    margin: 0 auto;
+    margin-top: 100px;
+    padding-top: 20px;
+    border-radius: 20px;
+    color: #2e2e2e;
+}
+.modal-property h1{
+    margin: 0px auto;
+    text-align: center;
+    width: 300px;
+    color: #fff;
+}
+.modal-property form{
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    color: #000;
+}
+.modal-property form label{
+    font-weight: bold;
+    padding: 3px;
+}
+
+.modal-property form input{
+    border: none;
+    border-radius: 10px;
+    padding-left: 10px;
+    height: 20px;
+}
+.modal-property form select{
+    border: none;
+    border-radius: 10px;
+    padding-left: 10px;
+    height: 25px;
+    color: #000000;
+}
+.modal-property form input:last-of-type{
+    margin-bottom: 30px;
+}
+.modal-property form button{
+    align-self: center;
+    border: none;
+    border-radius: 10px;
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: transparent;
+    color: #ffffff;
+}
+.modal-property form button:hover{
+    cursor: pointer;
+    background-color: #032a97;
 }
